Put metadata tables in a scrollable box to prevent overflow issues

--- a/modules/admin/app/assets/css/datamanager.scss
+++ b/modules/admin/app/assets/css/datamanager.scss
@@ -603,6 +603,10 @@ body {
   }
 }
 
+.file-meta {
+  overflow: auto;
+}
+
 .info-table {
   @extend .table, .table-striped, .table-bordered, .table-sm;
   tr td:first-child {
